# jcc

./: .clang-format  CMakeLists.txt  LICENSE  README.md  test.c
include/: ast.h  ast_visitor.h  common.h  compiler.h  jb_ir_gen.h  lexer.h  llvm_ir_gen.h  parser.h  platform.h  ppc.h  sema.h
include/inc/: token_kinds.inc
jab/: .gitignore  CMakeLists.txt  IRDesign.md  LICENSE  README.md  test.c
jab/include/: Common.h  context.h  error_reporter.h  jab.h  jit_env.h  module_builder.h  pass_manager.h  pretty_print.h  register_allocator.h  register_manager.h
jab/include/arch/x86_64/: encode.h  mdf.h  mdir.h  mdir_gen.h  pretty_print.h
jab/include/link/: coff.h  windows_pe.h
jab/include/misc/: crc.h
jab/include/passes/: analysis_passes.h  opt_passes.h
jab/include/passes/analysis/: liveness.h
jab/include/passes/opt/: register_coalescing.h  two_address.h
jab/include/passes/opt/x86_64/: peephole.h
jab/src/: context.cpp  jab.cpp  jit_env.cpp  main.cpp  module_builder.cpp  register_allocator.cpp  register_manager.cpp
jab/src/arch/x86_64/: encode.cpp  mdir.cpp  mdir_gen.cpp
jab/src/link/: coff.cpp  windows_pe.cpp
jab/src/misc/: crc.cpp
jab/src/passes/analysis/: liveness.cpp
jab/src/passes/opt/: register_coalescing.cpp
jab/tests/: run_tests.cpp
jb/: .gitignore  CMakeLists.txt  IRDesign.md  README.md  clang_opt.bash  clang_opt.bat  test.c
jb/include/: baseline_interp.h  context.h  error_reporter.h  jb.h  jbir_ops.inc  jit_env.h  module_builder.h  pass_manager.h  pretty_print.h  register_allocator.h  register_manager.h
jb/include/arch/: generic_mcir.h
jb/include/arch/x86_64/: encode.h  insts.inc  mcir.h  mcir_gen.h  mdf.h  pretty_print.h
jb/include/link/: coff.h  windows_pe.h
jb/include/misc/: crc.h
jb/include/passes/: analysis_passes.h  opt_passes.h
jb/include/passes/JBIR/analysis/: cfg_viz.h  create_cfg.h  create_dom_tree.h  liveness.h
jb/include/passes/JBIR/opt/: cleanup.h  dce.h  gvn.h  inline.h  licm.h  mem2reg.h  peephole.h  phi_elim.h  sscp.h
jb/include/passes/MCIR/analysis/: live_range.h  liveness.h
jb/include/passes/MCIR/opt/: register_coalescing.h
jb/include/passes/MCIR/opt/x86_64/: peephole.h
jb/src/: baseline_interp.cpp  context.cpp  jb.cpp  jit_env.cpp  main.cpp  module_builder.cpp  register_allocator.cpp  register_manager.cpp
jb/src/arch/x86_64/: encode.cpp  mcir.cpp  mcir_gen.cpp
jb/src/link/: coff.cpp  windows_pe.cpp
jb/src/passes/JBIR/analysis/: cfg_viz.cpp  create_cfg.cpp  create_dom_tree.cpp  liveness.cpp
jb/src/passes/JBIR/opt/: cleanup.cpp  dce.cpp  gvn.cpp  inline.cpp  licm.cpp  mem2reg.cpp  peephole.cpp  phi_elim.cpp  sscp.cpp
jb/src/passes/MCIR/analysis/: live_range.cpp  liveness.cpp
jb/src/passes/MCIR/opt/: register_coalescing.cpp
jb/tests/: run_tests.cpp
lib/: README.md  cprint.h  enum_to_switch.py  find_windows.h  small_profiler.h  thread_pool.h
src/: common.cpp  compiler.cpp  jb_ir_gen.cpp  lexer.cpp  llvm_ir_gen.cpp  main.cpp  parser.cpp  platform.cpp  ppc.cpp  sema.cpp
tests/: run_tests.cpp
